--- a/myapp/templates/booking/booking_list.html
+++ b/myapp/templates/booking/booking_list.html
@@ -153,10 +153,14 @@
             color: #ffffff;
         }
         .status-pending {
-            background-color: #e5e7eb; /* Light grey */
-            color: #374151; /* Dark grey */
+            background-color: #114688; /* Soft blue */
+            color: #ffffff;
         }
 
+        .status-completed {
+            background-color: #22c55e; /* Green */
+            color: #ffffff;
+        }
         .btn-group {
             display: flex;
             gap: 10px;
