--- a/myapp/templates/container/container_list.html
+++ b/myapp/templates/container/container_list.html
@@ -283,7 +283,7 @@
                         <td class="actions">
                             <a href="{% url 'container_update' container.pk %}" class="btn-edit">Edit</a>
                             <a href="{% url 'container_delete' container.pk %}" class="btn-delete">Delete</a>
-                            <a href="{% url 'driver_form' container.pk %}" class="btn-assign">Assign</a>
+                            <a href="{% url 'assign_driver' container.pk %}" class="btn-assign">Assign
                         </td>
                     </tr>
                 {% endfor %}
