--- a/myapp/templates/container/container_list.html
+++ b/myapp/templates/container/container_list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Container Management</title>
     <style>
-        /* Basic Reset */
+
         * {
             margin: 0;
             padding: 0;
@@ -21,7 +21,7 @@
             color: #333;
         }
 
-        /* Main Content */
+
         .content {
             margin-left: 270px;
             width: calc(100% - 270px);
@@ -40,7 +40,7 @@
             color: #111827;
         }
 
-        /* Profile Menu */
+
         .profile-menu {
             position: relative;
         }
@@ -123,7 +123,7 @@
             display: block;
         }
 
-        /* Table Styling */
+
         .table-container {
             background-color: #f1f5f9;
             border-radius: 8px;
@@ -162,7 +162,7 @@
             justify-content: flex-start;
         }
 
-        /* Action Buttons */
+
         .btn-edit, .btn-delete, .btn-assign {
             padding: 8px 12px;
             font-size: 14px;
@@ -201,7 +201,7 @@
             transform: translateY(-2px);
         }
 
-        /* Add Container Button */
+
         .add-button-container {
             display: flex;
             justify-content: flex-end;
@@ -267,30 +267,30 @@
             </thead>
             <tbody>
             {% if containers %}
-                {% for container in containers %}
-                    <tr>
-                        <td>{{ container.booking.booking_number }}</td>
-                        <td>{{ container.size }}</td>
-                        <td>{{ container.weight|floatformat:2 }}</td>
-                        <td>{{ container.contents }}</td>
-                        <td>
-                            {% if container.driver %}
-                                {{ container.driver.name }}
-                            {% else %}
-                                Unassigned
-                            {% endif %}
-                        </td>
-                        <td class="actions">
-                            <a href="{% url 'container_update' container.pk %}" class="btn-edit">Edit</a>
-                            <a href="{% url 'container_delete' container.pk %}" class="btn-delete">Delete</a>
-                            <a href="{% url 'driver_form' container.pk %}" class="btn-assign">Assign</a>
-                        </td>
-                    </tr>
-                {% endfor %}
+            {% for container in containers %}
+            <tr>
+                <td>{{ container.incremented_booking_number }}</td>
+                <td>{{ container.size }}</td>
+                <td>{{ container.weight|floatformat:2 }}</td>
+                <td>{{ container.contents }}</td>
+                <td>
+                    {% if container.driver %}
+                    {{ container.driver.username }}
+                    {% else %}
+                    Unassigned
+                    {% endif %}
+                </td>
+                <td class="actions">
+                    <a href="{% url 'container_update' container.pk %}" class="btn-edit">Edit</a>
+                    <a href="{% url 'container_delete' container.pk %}" class="btn-delete">Delete</a>
+                    <a href="{% url 'assign_driver' container.pk %}" class="btn-assign">Assign
+                </td>
+            </tr>
+            {% endfor %}
             {% else %}
-                <tr>
-                    <td colspan="6" style="text-align: center;">No containers found. Add one to get started!</td>
-                </tr>
+            <tr>
+                <td colspan="6" style="text-align: center;">No containers found. Add one to get started!</td>
+            </tr>
             {% endif %}
             </tbody>
         </table>
@@ -304,3 +304,4 @@
 </div>
 </body>
 </html>
+
